# analysis-swedish

./: Cargo.toml  README.md
src/: lib.rs  register.rs  stem.rs  stop.rs
tests/: swedish_comprehensive.rs
